--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
+before_install:
+  - JAVA_HOME=$(jdk_switcher home openjdk8) ./gradlew
