--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,14 @@ plugins {
 group 'de.dfki.mary'
 version '0.1.0-SNAPSHOT'
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+    withSourcesJar()
+    withJavadocJar()
+}
+
 task processLexicon {
     def srcFile = file('modules/pl/lexicon/pl.txt')
     ext.destFile = file("$buildDir/pl.txt")
