Add POM metadata

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins {
 
 group 'de.dfki.mary'
 version '0.1.0-SNAPSHOT'
+description 'Polish lexicon for MaryTTS'
+
+ext {
+    url = 'https://github.com/marytts/marytts-lexicon-pl'
+}
 
 java {
     toolchain {
@@ -43,6 +48,38 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
+            pom {
+                name = project.name
+                description = project.description
+                url = project.url
+                licenses {
+                    license {
+                        name = 'GNU Lesser General Public License v3.0 only'
+                        url = 'https://spdx.org/licenses/LGPL-3.0-only.html'
+                    }
+                }
+                developers {
+                    developer {
+                        name = 'Ingmar Steiner'
+                        id = 'psibre'
+                    }
+                    developer {
+                        name = 'Jolanta Bachan'
+                        id = 'jolabachan'
+                    }
+                }
+                contributors {
+                    contributor {
+                        name = 'Sascha Brawer'
+                        url = 'https://github.com/brawer'
+                    }
+                }
+                scm {
+                    connection = "scm:git:${project.url}.git"
+                    developerConnection = "scm:git:ssh://git@github.com:marytts/${project.name}.git"
+                    url = project.url
+                }
+            }
         }
     }
     repositories {
