Sign publication artifacts on release

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'de.dfki.mary.lexicon-compiler' version '0.3.0'
     id 'maven-publish'
+    id 'signing'
 }
 
 group 'de.dfki.mary'
@@ -91,4 +92,13 @@ publishing {
             credentials(PasswordCredentials)
         }
     }
+}
+
+signing {
+    required { isReleaseVersion }
+    sign publishing.publications.mavenJava
+}
+
+tasks.withType(Sign).configureEach {
+    onlyIf { isReleaseVersion }
 }
